# meg-deconding

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml
configs/deep/: megformer.yaml  word_decoder.yaml
scripts/: build_manifest.py  build_word_manifest.py  fetch_drive_meg.py  prepare_baseline_data.py
src/: README.md
src/meg_speech_decode/: __init__.py  cli.py  config.py  data.py  features.py  model.py  pipeline.py
src/meg_speech_decode/deep/: __init__.py  config.py  datasets.py  losses.py  models.py  text.py  train_megformer.py  train_word_decoder.py
